tests/chapter_11/valid/libraries/return_long.c
LONG64 add(int a, int b) {
    return (LONG64) a + (LONG64) b;
}